k8s/app_python/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app-python
  labels:
    app: python
spec:
  serviceName: app-python
  podManagementPolicy: "Parallel"
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  replicas: 3
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
        - name: app-python
          image: kernie/time-python
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /app/data
              name: python-data
            - mountPath: /downloaded-data
              name: downloaded-data
      volumes:
        - name: python-data
          emptyDir: { }
        - name: downloaded-data
          emptyDir: { }
