k8s/app_python/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-python
spec:
  type: LoadBalancer
  selector:
    app: app-python
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
