k8s/app_python/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-python
spec:
  type: NodePort
  selector:
    app: app-python
  ports:
    - port: 8080
      targetPort: 8080
