k8s/app_python/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-python-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: app.python
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-python-service
                port:
                  number: 8001
